src/objects/Strategic_Initiative_Review__c.object
<CustomObject>
    <description>For use with strategic plan 2014</description>
    <fields>
        <fullName>Actions_undertaken_since_last_update__c</fullName>
        <label>Actions undertaken since last update</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Budget_status__c</fullName>
        <label>Budget status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_review__c</fullName>
        <defaultValue>Today() -15</defaultValue>
        <label>Date of review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>On_time__c</fullName>
        <label>SI on schedule?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_strategic_initiative_RAG_rating__c</fullName>
        <label>Overall strategic initiative RAG rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Not started</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planned_upcoming_actions__c</fullName>
        <label>Planned upcoming actions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Risks_or_issues_with_the_SI__c</fullName>
        <label>Risks or issues with the SI</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not started</fullName>
                </value>
                <value>
                    <fullName>On track</fullName>
                </value>
                <value>
                    <fullName>Off track</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Initiative__c</fullName>
        <label>Strategic Initiative</label>
        <referenceTo>Strategic_Initiative__c</referenceTo>
        <relationshipLabel>Strategic Initiative Reviews</relationshipLabel>
        <relationshipName>Strategic_Initiative_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Strategic Initiative Review</label>
    <listViews>
        <fullName>Last_months</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Strategic_Initiative__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Last months</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SIR{0000}</displayFormat>
        <label>Strategic Initiative Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategic Initiative Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>